--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
     </p>
      <hr class="featurette-divider">
      <h2>Our social media site:-</h2>
-       <a href="https://www.instagram.com/radhe_i_and_i/?igshid=1trq2uimr2bvl"><img src="https://img.icons8.com/ios/50/000000/instagram.png"/>Instragram</a>
+       <a href="https://www.instagram.com/riiofficial_/"><img src="https://img.icons8.com/ios/50/000000/instagram.png"/>Instragram</a>
         <a style="margin-left: 10px ;" href="https://www.facebook.com/riiofficial_-106368724466404/"><img src="https://img.icons8.com/ios/50/000000/facebook.png"/>facebook</a>
       </ul>
      <hr class="featurette-divider">
