--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="carousel-item">
         <img src="img4.jpg" style="filter: brightness(75%);" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block m-5">
-          <h1>Finding the Best Life insurance Company</h1>
+          <h1>Finding the Best Life insurance Company....</h1>
           <p>Here we are to find the right life insurance provide to meet your all needs and offer an affordable price
             that everyone happy with.</p>
         </div>
